# spore-pre-commit

./: .pre-commit-hooks.yaml  README.md  check_invariants.py  prek.toml  pyproject.toml  spore_pre_commit.py  sync.py
.github/workflows/: ci-pr-checks.yml  ci-static-checks.yml  ci.yml  sync.yml
tests/fixtures/: smoke.sp
